# Scrape-n-Email

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  RCPheadlines.txt  RCPlinks.csv  README.md  clistScraper.py  csv_helper.py  drudgeScraper.py  jobs.txt  mailer.py  main.py  pyproject.toml  rcpScraper.py  requirements.txt  test_mailer_csv.py  test_scrapers.py
.claude/: README.md
.claude/commands/: optimize.md  ponytail.md
.claude/skills/optimize/: SKILL.md
.claude/skills/ponytail/: SKILL.md
.codex/: README.md
.codex/checklists/: pre-commit.md  pre-pr.md  regression-risk.md
.codex/prompts/: implementation-plan.md  issue-triage.md  optimize.md  ponytail.md  release-notes.md  review-diff.md
.codex/routines/: bugfix.md  feature.md  first-pass-repo-review.md  pr-review.md  refactor.md  security-review.md  test-and-verify.md
.github/workflows/: ci.yml
commands/: optimize.toml  ponytail.toml
github/workflows/: ci.yml
src/: Notes.txt
src/scrape_n_email/: __init__.py  __main__.py  cli.py  config.py  csv.py  mailer.py
src/scrape_n_email/scrapers/: base.py  clist.py  drudge.py  rcp.py
tests/integration/: test_pipeline.py
tests/unit/: test_base.py  test_base_retry.py  test_cli.py  test_cli_edge_cases.py  test_config.py  test_config_edge_cases.py  test_csv.py  test_csv_edge_cases.py  test_http_base.py  test_mailer.py  test_mailer_edge_cases.py  test_scrape_wrappers.py  test_scraper_errors.py  test_scrapers.py
