[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrape-n-email"
version = "1.0.0"
description = "Lightweight Python scraper for RCP headlines + Atlanta Craigslist jobs. Emails daily digests."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=4.9.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "types-requests>=2.31",
    "python-dotenv>=1.0",
]

[project.scripts]
scrape-n-email = "scrape_n_email.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scrape_n_email"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/unit/test_scrapers.py" = ["E501", "N812"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["bs4", "bs4.*", "requests", "requests.*", "urllib3", "urllib3.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
